--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ExamManagement
 endorsed.classpath=
 excludes=
+file.reference.jfreechart-1.5.6.jar=lib/jfreechart-1.5.6.jar
 file.reference.mysql-connector-j-9.5.0.jar=lib/mysql-connector-j-9.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.5.0.jar}
+    ${file.reference.mysql-connector-j-9.5.0.jar}:\
+    ${file.reference.jfreechart-1.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
